# beginning_cpp23

./: .gitignore  CMakeLists.txt  README.md  add_exercise.sh  make_project.sh  module.map  module.map.in  setup_source.sh
exercises/Ex1_01/: CMakeLists.txt  Ex1_01.cpp
exercises/Ex1_02/: CMakeLists.txt  Ex1_02.cpp
exercises/Ex2_01/: CMakeLists.txt
projects/exercise_2_1/: exercise_2_1.cpp
projects/size_of_bitwise_result/: size_of_bitwise_result.cpp
projects/test_increment_side_effects/: test_increment_side_effects.cpp
projects/test_unicode/: test_unicode.cpp
